# race-odin

./: .gitignore  README.md  application.html  archive-demo.html  build.sbt  building-race-odin.html  building-race.html  cesium-access-token.html  common-root.html  data-sources.html  demo.html  index.html  live-demo.html  motivation.html  odin  opensource.html  prerequisites.html  presentations.html  private-configuration.html  race-html.css  running-odin.html  vision.html  why-rust.html  windninja.html
config/: odin-czu-demo.conf  odin-demo.conf  odin-goesr.conf  odin-live-demo.conf  odin-live-sentinel.conf  odin-livesat-demo.conf  sentinel-archive.conf  sentinel-import.conf  sentinel-live.conf  sentinel-replay.conf
doc/manual/: application.md  application.rst  archive-demo.md  building-race-odin.md  building-race.md  cesium-access-token.md  common-root.md  data-sources.md  default.template.html  demo.md  directory.conf  index.md  index.rst  live-demo.md  motivation.md  motivation.rst  opensource.md  opensource.rst  prerequisites.md  presentations.md  private-configuration.md  race-html.css  running-odin.md  vision.md  vision.rst  why-rust.md  windninja.md
doc/slides/: directory.conf  (+1 more)
project/: PluginSettings.scala  plugins.sbt
script/: odin  odin.bat
slides/: odin.html
src/main/rust/odin_sentinel/: Cargo.toml
src/main/rust/odin_sentinel/examples/: monitor_sentinels.rs
src/main/rust/odin_sentinel/src/: actor.rs  errors.rs  lib.rs  ws.rs
src/main/rust/odin_sentinel/templates/: sentinel_config.ron
src/main/rust/odin_sentinel/tests/: test_serde.rs
(+36 files in other folders)
